Came into a bug regarding my index.html on tablet devices. It was showing a 10px white space between the header and the section. Other pages worked fine. To somewhat 'fix' this solution I added a margin-top: -10px;

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -270,8 +270,8 @@ input[type=email] {
     /* Re-sizing of image for mobile making the image appear at the top of the text
     instead of to the side */
     .img-pyramid {
-        width: 250px;
-        height: 250px;
+        width: 350px;
+        height: 350px;
         padding: 7px;
         float: left;
     }
@@ -279,8 +279,8 @@ input[type=email] {
     /* Re-sizing of image for mobile making the image appear at the top of the text
     instead of to the side */
     .img-hieroglyphs {
-        width: 250px;
-        height: 250px;
+        width: 350px;
+        height: 350px;
         padding: 7px;
         float: right;
     }
@@ -288,7 +288,7 @@ input[type=email] {
     /* Re-sizing of image for mobile making the image appear at the top of the text
     instead of to the side */
     .img-pharoah {
-        width: 300px;
+        width: 350px;
         height: 300px;
         padding: 7px;
         float: left;
@@ -299,10 +299,38 @@ input[type=email] {
 /* Media query: large mobile phones (425px and up) */
 @media screen and (min-width: 425px) {
 
-    .img-pharoah {
-        width: 190px;
-        height: 250px;
+    /* Re-sizing of image for mobile making the image appear at the top of the text
+    instead of to the side */
+    .img-sphinx {
+        width: 350px;
+        height: 350px;
         padding: 7px;
+    }
+    
+    /* Re-sizing of image for mobile making the image appear at the top of the text
+    instead of to the side */
+    .img-pyramid {
+        width: 350px;
+        height: 350px;
+        padding: 7px;
+        float: left;
+    }
+    
+    /* Re-sizing of image for mobile making the image appear at the top of the text
+    instead of to the side */
+    .img-hieroglyphs {
+        width: 350px;
+        height: 350px;
+        padding: 7px;
+        float: right;
+    }
+    
+    /* Re-sizing of image for mobile making the image appear at the top of the text
+    instead of to the side */
+    .img-pharoah {
+        width: 375px;
+        height: 300px;
+        padding: 5px;
         float: left;
     }
 
@@ -310,6 +338,32 @@ input[type=email] {
 
 /* Media query: tablet devices (768px and up */
 @media screen and (min-width: 768px) {
+
+    /* Header styling */
+header {
+    width: 100%;
+    background-color: rgba(135, 82, 25, 1);
+    color: white;
+    position: fixed;
+    z-index: 10;
+    display: flex;
+    justify-content: space-between;
+    letter-spacing: 2px;
+    padding-right: 20px;
+    padding-left: 20px;
+    flex-direction: row;
+}
+
+/* styling for the nav list */
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style-type: none;
+}
+
 
     .img-sphinx {
         width: 300px;
@@ -320,8 +374,8 @@ input[type=email] {
     }
     
     .img-pyramid {
-        width: 300px;
-        height: 300px;
+        width: 325px;
+        height: 325px;
         padding: 7px;
         float: left;
     }
@@ -335,15 +389,19 @@ input[type=email] {
     
     .img-pharoah {
         width: 250px;
-        height: 250px;
+        height: 350px;
         padding: 7px;
         float: left;
     }
     
     #egypt-intro {
+        /* Added margin-top as a solution removing white space between header and section.
+        Could not figure out why it only was happening to this page, all other pages work fine
+        */
+        margin-top: -10px;
         padding: 70px 20px 10px;
         width:100%;
-        height: 600px;
+        height: 700px;
         background-color: rgba(203, 150, 93, 0.8);
     }
     
@@ -357,14 +415,14 @@ input[type=email] {
     #egypt-hieroglyphics {
         padding: 70px 20px 10px;
         width:100%;
-        height: 750px;
+        height: 650px;
         background-color: rgba(203, 150, 93, 0.8);
     }
     
     #egypt-newsletter {
         padding: 50px 10px 5px;
         width:100%;
-        height: 700px;
+        height: 650px;
         background-color: rgba(223, 149, 71, 1);
         text-align: center;
     }
